добавила поиск и отфильтрованные кружочки

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+input{
+    background: none;
+	color: inherit;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
 ul{
     list-style-type: none;
     margin: 0;
@@ -19,33 +27,21 @@ body{
     flex-direction: column;
     justify-content: flex-start;
 }
-.search{
-    height: 55px;
-    margin-bottom: 15px;
-    border-radius: 15px;
-    background-color: rgb(252, 111, 186) ;
-}
 .filters{
     margin-top: 15px;
     margin-bottom: 15px;
     display: flex;
 }
-.filter{
-    height: 30px;
-    margin: 0;
-    width: 100px;
-    background-color: rgb(233, 83, 163);
-    border-radius: 20px;
-    margin-right: 6px;
-}
+
 .transport__info{
-    height: 365px;
     margin-bottom: 5px;
     background-color:#fff;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: 1px solid #B1ADFF;
     color:  #8684B5;
+    font-size: 14px;
+    font-weight: 300;
 }
 .active{
     display: flex;
@@ -55,6 +51,7 @@ body{
     margin: 0;
     padding: 0 5%;
     font-size: 16px;
+    font-weight: 500;
     height: 55px;
     border-bottom: 1px solid #B1ADFF;
 }
@@ -80,12 +77,12 @@ body{
 .taxi , .number{
     color: #0D086B;
     font-size: 14px;
+    font-weight: 500;
     margin: 0;
 }
 .route{
     margin: 0;
-    font-size: 14px;
-    font-weight: 300;
+
 }
 .status{
     display: flex;
@@ -101,16 +98,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
-    font-weight: 300;
 }
 .ststus__now img{
     height: 11px;
     margin-right: 1px;
 }
 .data{
-    font-weight: 300;
-    font-size: 14px;
     height: 150px;
     border-bottom: 1px solid #B1ADFF;
     display: flex;
@@ -118,7 +111,7 @@ body{
     justify-content: flex-start;
     padding: 0 5%;
 }
-.data h5 , .driver__head{
+.subtitle{
     font-weight: 400;
     font-size: 16px;
     color: #0D086B;
@@ -136,8 +129,7 @@ body{
 .driver p{
     color: #0D086B;
     margin-top: 0px;
-    font-size: 14px;
-    font-weight: 300;
+
 }
 .driver img{
     height:12px ;
@@ -149,4 +141,65 @@ body{
     border-radius: 15px;
     margin: 2%;
     margin-top: 40px;
+}
+
+/*поиск*/
+.search__img{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 15px;
+    cursor: pointer;
+}
+.search{
+    margin-bottom: 15px;
+    position: relative;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    border: 1px solid #B1ADFF;
+}
+.search__text{
+    display: block;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 19.36px;
+    text-align: left;
+
+}
+.search__img{
+    height: 20px;
+}
+.search__text::placeholder{
+    color: #8684B5;
+    font-family:'Inter';
+    font-weight: 300;
+    font-size: 16px;
+}
+/*фильтры*/
+.filter{
+    margin-left: 3px;
+    border-radius: 20px;
+    position: relative;
+    background-color:  #D5D4FD;
+    display: flex; /* Используем Flexbox для выравнивания */
+    align-items: center; /* Выравниваем элементы по вертикали */
+    padding: 6px; 
+}
+.filter__text{
+    margin: 0%;
+    display: block;
+    padding: 3px;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 19.36px;
+    text-align: left;
+    color: #0D086B;
+    flex-grow: 1;
+
+}
+.filter img {
+    height: 18px;
+    cursor: pointer;
+    margin-left: auto; /* Отодвигаем изображение к правому краю */
 }
